--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_UpcomingEventsPart.cshtml
@@ -1,6 +1,6 @@
 ﻿<div id="lobbyUpcomingEventsPartBody" class="event-tiles-wrapper">
 	<div class="lobby-menu-container">
-		<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add green-color hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
+		<input type="button" value="Stwórz publiczne wydarzenie" id="addPublicEventBtn" class="btn-add hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }" />
 	</div>
 	@Html.Partial( "_UpcomingEventsPart.EventCountTiles" )
 
