introduced default-dark theme

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -10,7 +10,7 @@
 	@Html.Partial("_DayPlanPart")
 </section>
 
-<section class="dz-row">
+<section class="dz-row settings-part">
 	@Html.Partial( "_DetailsSettings", @Model )
 </section>
 
