--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
@@ -1,9 +1,7 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
 
 <section id="settingsContainer">
-	<div class="title-header">
-		<span>/Ustawienia/</span>
-	</div>
+	<header class="section-title"></header>
 
 	@if (User.Identity.IsAuthenticated)
  {
