--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,4 +1,4 @@
-﻿<section class="dz-row nav-part">
+﻿<section class="dz-row nav-part skin-nav-part">
 	@Html.Partial( "_NavPart" )
 </section>
 <section class="dz-row dashboard-part">
