--- a/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/EventBlock.css
@@ -71,10 +71,10 @@
 
 .event-block-expand .event-block {
 	line-height: 1;
-	background: rgb(249, 248, 246);
-	margin-left: 4px;
-	border-bottom: 1px solid #E6E1DB;
-	border-left: 1px solid #E6E1DB;
+	/*background: rgb(249, 248, 246);*/
+	/*margin-left: 4px;*/
+	/*border-bottom: 1px solid #E6E1DB;
+	border-left: 1px solid #E6E1DB;*/
 }
 
 .event-block-expand .event-block-link {
@@ -85,7 +85,6 @@
 	font-size: 1.5em;
 	color: #636363;
 	padding: 6px;
-	background: #e4e1de;
 }
 
 .event-block-expand .event-kind-tag {
@@ -99,7 +98,6 @@
 	color: rgb(72, 68, 62);
 	padding: 10px;
 	font-size: 1.2em;
-	background: #E4E1DE;
 }
 
 	.event-block-expand .event-block-body :hover {
@@ -110,6 +108,7 @@
 	padding: 10px;
 	overflow: hidden;
 	color: rgb(152, 152, 137);
+	border-top: 1px solid #9C9C9C;
 }
 
 .event-block-expand .event-block-date {
