--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -78,7 +78,7 @@ fieldset {
 }
 
 #lobby .dz-column-inner-wrapper {
-	border-right: 1px solid #F3F3F3;
+	/*border-right: 1px solid #F3F3F3;*/
 	background: #FBFAF9;
 	width: 83%;
 }
@@ -125,11 +125,10 @@ fieldset {
 	border-top: 1px solid white;
 }
 
-#loginBarContainer {
+#loginBar {
 	font-size: 18px;
 	text-align: right;
 	position: fixed;
-	color: #676666;
 	top: 0px;
 	height: 28px;
 	right: 18%;
@@ -170,23 +169,15 @@ fieldset {
 }
 
 #lobbyNavContainer {
-	font-size: 1.2em;
 	text-align: center;
-	padding-top: 80px;
+	padding-top: 0px;
 	padding-bottom: 80px;
+	font-family: Raleway-Regular;
 }
 
 	#lobbyNavContainer a {
-		margin-right: 10px;
-		color: #c5c5c5;
 		text-decoration: none;
 	}
-
-.selected-nav-link {
-	text-shadow: 0px 1px 1px #929292;
-	border-bottom: 2px solid #B5E4EC;
-	color: #4C4C4C !important;
-}
 
 .events-menu-container {
 	text-align: center;
@@ -202,7 +193,7 @@ fieldset {
 	margin-bottom: 20px;
 	transition-duration: .5s;
 	color: gainsboro;
-	background: #E4E1DE;
+	background: #EAEAEA;
 }
 
 	.menu-item-container.selected {
@@ -347,7 +338,7 @@ fieldset {
 	border-bottom: 1px solid #CECECE;
 	overflow: hidden;
 	padding: 4px;
-	background: #FDFDFD;
+	/*background: #FDFDFD;*/
 	padding-left: 0px;
 }
 
@@ -697,10 +688,18 @@ fieldset {
 
 #loginPageContainer {
 	display: none;
+	width: 100%;
+	box-sizing: border-box;
+	background: #FBFAF9;
+	padding-top: 20px;
 }
 
 #registerPageContainer {
 	display: none;
+	width: 100%;
+	box-sizing: border-box;
+	background: #FBFAF9;
+	padding-top: 20px;
 }
 
 #logoutForm {
@@ -774,11 +773,11 @@ fieldset {
 
 .section-title {
 	font-size: 1.6em;
-	color: #a2a2a2;
+	color: gray;
 	text-align: center;
 	padding-bottom: 10px;
 	padding-top: 20px;
-	border-bottom: 1px solid #E8E8E8;
+	border-bottom: 1px solid #e8e8e8;
 }
 
 .hover-cursor-pointer:hover {
@@ -824,9 +823,9 @@ li.line-through-text {
 
 .overview-events-list-container {
 	margin: 1px;
-	background: rgb(232, 229, 225);
+	background: #eaeaea;
 	overflow: hidden;
-	border: 1px solid #E2E2E2;
+	border: 1px solid #e2e2e2;
 }
 
 .enlarged-font {
@@ -852,7 +851,7 @@ li.line-through-text {
 .event-list {
 	padding-right: 2px;
 	margin: 0;
-	background: #E8E5E1;
+	background: #EAEAEA;
 }
 
 .event-list-item:hover {
@@ -1034,7 +1033,7 @@ li.line-through-text {
 	width: 200px;
 	height: 32px;
 	padding: 0px 10px;
-	border: 1px solid #CACACA;	
+	border: 1px solid #CACACA;
 }
 
 .event-startdate-txtbox {
@@ -1120,9 +1119,10 @@ li.line-through-text {
 .dashboard-title {
 	padding: 12px;
 	font-size: 1.2em;
-	background: #E8E5E1;
-	color: #B9B9B9;
+	background: #CECECE;
+	color: #b9b9b9;
 	position: relative;
+	border-bottom: 1px solid #B5B5B5;
 }
 
 .dashboard-calendar-list {
