--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/CalendarWidget/calendarWidget.css
@@ -57,7 +57,6 @@
 .weekday {
 	display: table-cell;
 	text-align: center;
-	background: #E4E1DE;
 	padding: 10px;
 }
 
@@ -100,7 +99,6 @@
 
 .other-month-cell {
 	position: relative;
-	background: rgb(247, 247, 247);
 }
 
 .calendar-cell {
@@ -121,7 +119,6 @@
 	height: 26px;
 	z-index: 98;
 	color: gray;
-	background: #f7f7f7;
 }
 
 	.other-month-cell .cell-span-container span {
@@ -200,5 +197,5 @@
 	display: table;
 	table-layout: fixed;
 	width: 100%;
-	background: rgb(228, 225, 222);
+	background: #EAEAEA;
 }
