--- a/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Scripts/Lib/DzieuoJs/Dzieuo.css
@@ -40,14 +40,16 @@
 		width: 10px;
 		height: 10px;
 		margin: 3px;
-		border: 2px solid #4C4C4C;
+		/*border: 2px solid #4C4C4C;*/
 		display: inline-block;
 		border-radius: 10px;
+		position: relative;
+		top: 4px;
 	}
 
 		#dzHorizontalPaging .dz-horizontal-paging-item.current {
-			background: #4C4C4C;
-			border: 2px solid white;
+			/*background: #4C4C4C;*/
+			/*border: 2px solid white;*/
 		}
 
 #dzVerticalPaging {
@@ -59,14 +61,14 @@
 		width: 10px;
 		height: 10px;
 		margin: 4px;
-		border: 2px solid #4C4C4C;
+		/*border: 2px solid #4C4C4C;*/
 		display: block;
 		border-radius: 10px;
 	}
 
 		#dzVerticalPaging .dz-vertical-paging-item.current {
-			background: #4C4C4C;
-			border: 2px solid white;
+			/*background: #4C4C4C;
+			border: 2px solid white;*/
 		}
 
 #dzHorizontalNav #dzNextArrow {
