--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventBlock.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="event-block">
+﻿<div class="event-block skin-event-block">
 	<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 	<div class="event-block-name" data-bind="text: name"></div>
 	<div class="event-block-body">
