--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 	<link href="/Content/MaterialDesignIcons/materialdesignicons.min.css" rel="stylesheet">
 	@Styles.Render( "~/Content/css" )
 </head>
-<body>
+<body class="skin-app-background">
 	<div id="appContainer">
 		<div id="pageOverlayAtSiteLoad">
 			<div id="pageOverlayAtSiteLoadText">
@@ -43,6 +43,7 @@
 	<script src="~/Scripts/Lib/DzieuoJs/jquery.animate-enhanced.min.js"></script>
 	<script src="~/Scripts/Lib/DzieuoJs/dzieuo.js"></script>
 
+
 	<script src="~/Scripts/JSModels/KKEventModel.js"></script>
 	<script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
 	<script src="~/Scripts/JSModels/KKNoteModel.js"></script>
@@ -52,6 +53,7 @@
 	<script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
 	<script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
+	<script src="~/Scripts/JSUtils/SkinConfig.js"></script>
 	<script src="~/Scripts/JSUtils/EventColorHelper.js"></script>
 	<script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
 	<script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
